--- a/client/public/index.html
+++ b/client/public/index.html
@@ -12,7 +12,8 @@
     <link rel="apple-touch-icon" href="logo192.png" />
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <link href="https://fonts.googleapis.com/css?family=Corben|Josefin+Sans&display=swap" rel="stylesheet">    <title>React App</title>
+    <link href="https://fonts.googleapis.com/css?family=Play&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Corben|Josefin+Sans&display=swap" rel="stylesheet">    <title>DC*RPG</title>
     
   </head>
   <body>
